<resources>
    <string name="app_name">Linux Kernel Documentation</string>
    <string name="action_search">Search page</string>
    <string name="action_kernel_archives">Kernel Archives</string>
    <string name="action_about">About app</string>
    <string name="action_forward">Forward</string>
    <string name="action_back">Back</string>
    <string name="action_home">Home</string>
    <string name="action_changelog">Changelog</string>
    <string name="action_home_snackbar">Returned to home page.</string>
    <string name="action_exit">Save &amp; Exit</string>
    <string name="fab_action">Returned to main page.</string>
    <string name="first_fragment_label">Linux Kernel &#128039;</string>
    <string name="about_title">Version Information</string>
    <string name="app_version">Application</string>
    <string name="kernel_tag">Mainline Kernel (kernel.org)</string>
    <string name="kernel_version">6.13.0</string>
</resources>