<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bryancandi.linux.kernel.docs.MainActivity">
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_arrow_back"
        android:orderInCategory="100"
        android:title="@string/action_back"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_arrow_forward"
        android:orderInCategory="101"
        android:title="@string/action_forward"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="102"
        android:title="@string/action_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_save_exit"
        android:orderInCategory="300"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:orderInCategory="400"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>